<resources>
    <string name="app_name">NewFoodApp</string>
    <array name="menuOptions">
        <item>Profile</item>
        <item>Orders</item>
        <item>offer and promo</item>
        <item>Privacy policy</item>
        <item>Security</item>
    </array>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tag_menu">menu</string>
    <string name="tag_content">content</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="offer_and_promo">offer and promo</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="security">Security</string>
    <string name="delicious">Delicious\nfood for you</string>
    <string name="search">Search</string>
    <string name="spicy">Spicy chieckns</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="delivered">Delivered between monday aug and thursday 20 from 8pm to 91:32 pm</string>
    <string name="return_policy">Return Policy</string>
    <string name="policy">All our foods are double checked before leaving our stores so by any case you found a broken food please contact our hotline immediately.</string>
    <string name="cart">Add to cart</string>
</resources>